--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <title>Biblioteca Start</title>
 </head>
 <body>
-    <header class="cabeçalho">
+    <header class="cabecalho">
         <div class="container">
-            <img class="container_imagem" src="img/Logo.svg" alt="logo da biblioteca Start">
-            <h1 class="container_titulo">
-                Biblioteca <b class="container_titulo--negrito"> Start </b>
-            </h1>
-        <p class="container_frase">
-            "Aqui, cada livro é um <i>Start</i> para um novo conhecimento!"
-        </p>
-        </div>
-    </header>
+    <img class="container_imagem"   src="img/Logo.svg" alt="logo da biblioteca Start">
+    <h1 class="container_titulo">
+        Biblioteca <b class=" container_titulo--negrito"> Start</b>
+    </h1>
+    <p class="container_frase">
+        "Aqui, cada livro é um <i>Start</i> para um novo conhecimento!"
+    </p>
+</div>
+</header>
+    
 </body>
 </html>
